translation-tool/inputs/source_meta/objects/HSVC_Limit_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Limit Usage</relationshipLabel>
        <relationshipName>Limit_Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Limit Usage</relationshipLabel>
        <relationshipName>Limit_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limit_Config__c</fullName>
        <label>Limit Config</label>
        <referenceTo>HSVC_Limit_Config__c</referenceTo>
        <relationshipLabel>Limit Usage</relationshipLabel>
        <relationshipName>Limit_Usage</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Limit Usage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LU-{000}</displayFormat>
        <label>Limit Usage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limit Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>